--- a/style.css
+++ b/style.css
@@ -1,1 +1,88 @@
-/* style sheet for GoTBingo */
+/* GoT Bingo Style Sheet*/
+
+body {
+	background-color: white;
+	color: black;
+	font-size: 20px;
+	font-family: "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
+}
+
+h1, th {
+	font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+h1 {
+	font-size: 28px;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+th, td {
+	padding: 10px;
+	border: 2px #666 solid;
+	text-align: center;
+	font-size: 24px;
+}
+
+#square0 {
+	background-color: #7FFFD4;
+}
+#square1 {
+	background-color: #7FFFD4;
+}
+#square2 {
+	background-color: #7FFFD4;
+}
+#square3 {
+	background-color: #7FFFD4;
+}
+#square4 {
+	background-color: #7FFFD4;
+}
+#square5 {
+	background-color: #7FFFD4;
+}
+#square6 {
+	background-color: #7FFFD4;
+}
+#square7 {
+	background-color: #7FFFD4;
+}
+#square8 {
+	background-color: #7FFFD4;
+}
+#square9 {
+	background-color: #7FFFD4;
+}
+#square10 {
+	background-color: #7FFFD4;
+}
+#square11 {
+	background-color: #7FFFD4;
+}
+#square12 {
+	background-color: #7FFFD4;
+}
+#square13 {
+	background-color: #7FFFD4;
+}
+#square14 {
+	background-color: #7FFFD4;
+}
+#square15 {
+	background-color: #7FFFD4;
+}
+#square16 {
+	background-color: #7FFFD4;
+}
+#square17 {
+	background-color: #7FFFD4;
+}
+#square18 {
+	background-color: #7FFFD4;
+}
+#square19 {
+	background-color: #7FFFD4;
+}
