--- a/style.css
+++ b/style.css
@@ -1,125 +1,24 @@
 /* GoT Bingo Style Sheet*/
-
-body {
-	background-color: white;
-	color: black;
-	font-size: 20px;
-	font-family: "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
+head {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
 }
 
-h1, th {
-	font-family: Georgia, "Times New Roman", Times, serif;
+[src="images/AGoTBanner.jpg"] {
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  width: 100%;
 }
-
-h1 {
-	font-size: 28px;
-}
-
-table {
-	border-collapse: collapse;
-}
-
-th, td {
-	padding: 10px;
-	border: 2px #666 solid;
-	text-align: center;
-	font-size: 24px;
-}
-
-#square0 {
-	background-color: #7FFFD4;
-}
-#square1 {
-	background-color: #7FFFD4;
-}
-#square2 {
-	background-color: #7FFFD4;
-}
-#square3 {
-	background-color: #7FFFD4;
-}
-#square4 {
-	background-color: #7FFFD4;
-}
-#square5 {
-	background-color: #7FFFD4;
-}
-#square6 {
-	background-color: #7FFFD4;
-}
-#square7 {
-	background-color: #7FFFD4;
-}
-#square8 {
-	background-color: #7FFFD4;
-}
-#square9 {
-	background-color: #7FFFD4;
-}
-#square10 {
-	background-color: #7FFFD4;
-}
-#square11 {
-	background-color: #7FFFD4;
-}
-#square12 {
-	background-color: #7FFFD4;
-}
-#square13 {
-	background-color: #7FFFD4;
-}
-#square14 {
-	background-color: #7FFFD4;
-}
-#square15 {
-	background-color: #7FFFD4;
-}
-#square16 {
-	background-color: #7FFFD4;
-}
-#square17 {
-	background-color: #7FFFD4;
-}
-#square18 {
-	background-color: #7FFFD4;
-}
-#square19 {
-	background-color: #7FFFD4;
-}
-
-
-
-
-.container {
-  width: 500px;
-  margin: 0 auto; }
-
-.game-container {
-  margin-top: 40px;
-  position: relative;
-  padding: 15px;
-  cursor: default;
-  -webkit-touch-callout: none;
-  -ms-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -ms-touch-action: none;
-  touch-action: none;
-  background: #bbada0;
-  border-radius: 6px;
-  width: 500px;
-  height: 500px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
 
 .grid-container {
   position: absolute;
   z-index: 1; }
 
 .grid-row {
-  margin-bottom: 15px; }
+  margin-bottom: 20px; }
   .grid-row:last-child {
     margin-bottom: 0; }
   .grid-row:after {
@@ -130,9 +29,17 @@ th, td {
 .grid-cell {
   width: 106.25px;
   height: 106.25px;
-  margin-right: 15px;
+  margin-right: 20px;
   float: left;
-  border-radius: 3px;
+  border-radius: 6px;
   background: rgba(238, 228, 218, 1.0); }
   .grid-cell:last-child {
     margin-right: 0; }
+  .grid-cell:active {
+  background-color:  rgba(238, 228, 218, 0.5);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+[draggable=true] {
+    cursor: move;
+}
