--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ head {
   top: 0px;
   left: 0px;
   right: 0px;
-  width: 100%;
 }
 
 .grid-container {
@@ -40,6 +39,31 @@ head {
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
+.list-container {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+}
+
+.list-row {
+  margin-bottom: 20px; }
+  .list-row:last-child {
+    margin-bottom: 0; }
+  .list-row:after {
+    content: "";
+    display: block;
+    clear: both; }
+
+
+.list-cell {
+  width: 106.25px;
+  height: 106.25px;
+  margin-right: 20px;
+  float: left;
+  border-radius: 6px;
+  background: rgba(238, 228, 218, 1.0); }
+
 [draggable=true] {
     cursor: move;
 }
