--- a/style.css
+++ b/style.css
@@ -63,7 +63,15 @@ head {
   float: left;
   border-radius: 6px;
   background: rgba(238, 228, 218, 1.0); }
-
+  .list-cell:last-child {
+    margin-right: 0; }
+  .list-cell:active {
+  background-color:  rgba(238, 228, 218, 0.5);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+  
+  
 [draggable=true] {
     cursor: move;
 }
