scrolling list added

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,11 +35,31 @@ head {
   .grid-cell:last-child {
     margin-right: 0; 
 }
+/*div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+}
 
+div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+    background-color: #777;
+}
+*/
 .list-container {
   position: absolute;
   top: 50px;
   right: 50px;
+  width: 200px;
+  height: 300px;
+  overflow: auto;
 }
 
 .list-row {
@@ -60,13 +80,8 @@ head {
   border-radius: 9px;
   background: rgba(238, 228, 218, 1.0); }
   .list-cell:last-child {
-    margin-right: 0; }
-  .list-cell:active {
-  background-color:  rgba(238, 228, 218, 0.5);
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
+    margin-right: 0;
 }
-  
   
 [draggable=true] {
     cursor: move;
