--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@ head {
     clear: both; }
 
 .grid-cell {
+  position: relative;
   width: 106.25px;
   height: 106.25px;
   margin-right: 10px;
@@ -36,24 +37,35 @@ head {
   .grid-cell:last-child {
     margin-right: 0; 
 }
-/*div.scrollmenu {
-    background-color: #333;
-    overflow: auto;
-    white-space: nowrap;
+
+.char_img {
+  opacity: 1;
+  display: block;
+  width: inherit;
+  height: inherit;
+  border-radius: 9px;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
-div.scrollmenu a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
+.char_name {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
 }
 
-div.scrollmenu a:hover {
-    background-color: #777;
+.grid-cell:hover .char_img {
+  opacity: 0.3;
 }
-*/
+
+.grid-cell:hover .char_name {
+  opacity: 1;
+}
+
 .list-container {
   position: absolute;
   top: 50px;
@@ -74,6 +86,7 @@ div.scrollmenu a:hover {
 
 
 .list-cell {
+  position: relative;
   width: 106.25px;
   height: 106.25px;
   margin-right: 20px;
@@ -83,7 +96,16 @@ div.scrollmenu a:hover {
   .list-cell:last-child {
     margin-right: 0;
 }
-  
+
+.list-cell:hover .char_img {
+  opacity: 0.3;
+}
+
+.list-cell:hover .char_name {
+  opacity: 1;
+}
+
 [draggable=true] {
     cursor: move;
 }
+
